<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint-profiler-optional-parent</artifactId>
        <relativePath>../profiler-optional-parent</relativePath>
        <version>1.8.0-SNAPSHOT</version>
    </parent>

    <artifactId>pinpoint-profiler-optional-jdk9</artifactId>
    <name>pinpoint-profiler-optional-jdk9</name>
    <packaging>jar</packaging>
    <description>pinpoint profiler optional package for jdk 9</description>

    <properties>
        <jdk.version>9</jdk.version>
        <jdk.home>${env.JAVA_9_HOME}</jdk.home>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvm>${jdk.home}/bin/java</jvm>
                    <!-- AbstractPinpointPluginTestSuite needs this to resolve
                        path of required jars -->
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <failIfNoTests>true</failIfNoTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>animal-sniffer-maven-plugin</artifactId>
                <version>1.16</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <fork>true</fork>
                    <debug>true</debug>
                    <optimize>true</optimize>
                    <encoding>${encoding}</encoding>
                    <showDeprecation>true</showDeprecation>
                    <compilerVersion>${jdk.version}</compilerVersion>
                    <executable>${jdk.home}/bin/javac</executable>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <excludes>
                        <exclude>**/Mock*</exclude>
                        <exclude>**/Abstract*</exclude>
                        <exclude>**/*Helper</exclude>
                        <exclude>**/*$*</exclude>
                    </excludes>
                    <argLine>
                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                        -Dfile.encoding=${encoding}
                    </argLine>
                    <jvm>${test.jdk.home}/bin/java</jvm>
                    <forkMode>once</forkMode>
                </configuration>
            </plugin>


            <plugin>
                <!-- Temporary patch for java9-->
                <groupId>org.openclover</groupId>
                <artifactId>clover-maven-plugin</artifactId>
                <!-- http://openclover.org/ -->
                <!-- https://bitbucket.org/openclover/clover/issues/61/430-support-java-9 -->
                <!-- 4.3 will support java9 -->
                <version>4.2.1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>